
v1.2.1 "cotidie morimur":
 - Fix functionality of "find all missing"
 - Add ability to reset settings by pressing R on startup or R in settings
 - Add Hungarian translation
 - Add Polish translation

v1.2.0 "cotidie morimur":
 - Make text wrapping not use hyphens
 - Make long texts in lists scroll horizontally
 - Fix issue where text search query data would get cut off
 - Fix "base game missing" message for system title DLC & updates
 - Fix some wrapping issues on Korean systems
 - Fix Romanian not being detected
 - Fix common occurence of the "server didn't return status 200" error
 - Add French (Canada) translation
 - Add (partial) Italian translation
 - Add Portuguese translation
 - Add Korean translation
 - Add Greek translation
 - Add searching using a title ID
 - Add searching using a legacy search query
 - Add toggles in settings menu to replace value true/false
 - Add ability to add an item to the queue from extended meta

v1.1.0 "aeraria":
 - fix issue where NAND titles wouldn't be reinstallable
 - add Romanian translation
 - add French translation

v1.0.1 "aeraria":
 - additionally to initial release:
 - hotfix arm11 after title installation

v1.0.0 "aeraria":
 - update for new hsite v3 api
 - re-add light theme & make it the default
 - add log spliting: logs get split into multiple files sorted on age
 - add a download speed and ETA field while installing titles
 - add random title button
 - add log uploading
 - improve utf8 handling
 - remove find_missing prompt in favor of automatic adding
 - fix issue where categories weren't sorted as on website
 - fix issue where closing the app from home would freeze the system
 - fix issue where spamming toggle on a "true"/"false" setting would crash the system
 - fix issue where cursor wouldn't appear if second to last title was removed in queue
 - fix issue where find_missing never did anything
 - fix issue where seed was never installed