@@ -10,10 +10,6 @@ TOPDIR ?= $(CURDIR)
 include $(DEVKITARM)/3ds_rules
 
 
-%.o: %.cc
-	$(SILENTMSG) $(notdir $<)
-	$(SILENTCMD)$(CXX) -MMD -MP -MF $(DEPSDIR)/$*.d $(CXXFLAGS) -c $< -o $@ $(ERROR_FILTER)
-
 #---------------------------------------------------------------------------------
 # TARGET is the name of the output
 # BUILD is the directory where object files & intermediate files will be placed
@@ -168,7 +164,7 @@ export OFILES_BIN	:=	$(addsuffix .o,$(BINFILES)) \
 			$(PICAFILES:.v.pica=.shbin.o) $(SHLISTFILES:.shlist=.shbin.o) \
 			$(addsuffix .o,$(T3XFILES))
 
-export OFILES := $(OFILES_BIN) $(OFILES_SOURCES)
+export OFILES := $(OFILES_BIN) $(OFILES_SOURCES) hscert.o
 
 export HFILES	:=	$(PICAFILES:.v.pica=_shbin.h) $(SHLISTFILES:.shlist=_shbin.h) \
 			$(addsuffix .h,$(subst .,_,$(BINFILES))) \
@@ -216,24 +212,10 @@ else
 	REAL_ALL	:=	$(REAL_ALL) cia
 endif
 
-OFILES += hscert.o
-
 #---------------------------------------------------------------------------------
 all: $(REAL_ALL)
-_build_all: build/hscert.c
+_build_all:
 	@$(MAKE) --no-print-directory -C $(BUILD) -f $(CURDIR)/Makefile
-
-ifneq ($(wildcard hscert.der),)
-# If hscert.der exists we use that ...
-build/hscert.c: hscert.der
-	$(SILENTCMD) xxd -i hscert.der > build/hscert.c
-	$(SILENTMSG) generated ... hscert.c
-else
-# ... else we install a dummy
-build/hscert.c:
-	$(SILENTCMD) echo 'unsigned int hscert_der_len = 0; unsigned char hscert_der[] = { 0x00 };' > build/hscert.c
-	$(SILENTMSG) stubbed ... hscert.c
-endif
 
 $(BUILD)/romfs.bin: $(ROMFS_FILES)
 	$(SILENTCMD) 3dstool -ctf romfs $(BUILD)/romfs.bin --romfs-dir romfs
@@ -340,6 +322,25 @@ endef
 	@echo $(notdir $<)
 	@$(call shader-as,$(foreach file,$(shell cat $<),$(dir $<)$(file)))
 
+%.o: %.cc
+	$(SILENTMSG) $(notdir $<)
+	$(SILENTCMD)$(CXX) -MMD -MP -MF $(DEPSDIR)/$*.d $(CXXFLAGS) -c $< -o $@ $(ERROR_FILTER)
+
+ifneq ($(wildcard ../hscert.der),)
+# If hscert.der exists we use that ...
+hscert.o: ../hscert.der
+	$(SILENTCMD) cd ..; xxd -i hscert.der > build/hscert.c; cd build
+	$(SILENTMSG) generated ... hscert.c
+	$(SILENTCMD)$(CXX) -MMD -MP -MF $(DEPSDIR)/$*.d $(CXXFLAGS) -c hscert.c -o hscert.o $(ERROR_FILTER)
+	$(SILENTMSG) hscert.o
+else
+# ... else we install a dummy
+hscert.o:
+	$(SILENTCMD) echo 'unsigned int hscert_der_len = 0; unsigned char hscert_der[] = { 0x00 };' > hscert.c
+	$(SILENTMSG) stubbed ... hscert.c
+	$(SILENTCMD)$(CXX) -MMD -MP -MF $(DEPSDIR)/$*.d $(CXXFLAGS) -c hscert.c -o hscert.o $(ERROR_FILTER)
+	$(SILENTMSG) hscert.o
+endif
 #---------------------------------------------------------------------------------
 %.t3x	%.h	:	%.t3s
 #---------------------------------------------------------------------------------
